--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <body>
 	<div id="app"></div>
 	<script src="https://cdn.jsdelivr.net/npm/babel-polyfill@6.26.0/dist/polyfill.min.js"></script>
-	<script src="./dist/build.js"></script>
+	<script src="./dist/build.js?v=1"></script>
 </body>
 </html>
