add new header for static-scripts

--- a/static-scripts/AkcentufaCalcPolygraphy/index.html
+++ b/static-scripts/AkcentufaCalcPolygraphy/index.html
@@ -536,6 +536,7 @@
 </head>
 
 <body>
+	<script src="../header.js"></script>
 	<div class="c-polygrafy-header">
 		<div class="wrapper pol-calc-wrapper">
 			<div id="polygraphy_calc" class="clearfix">
@@ -676,7 +677,6 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery-selectric@0.1.2/src/jquery.selectric.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/multiple-select@1.2.1/multiple-select.min.js"></script>
 <script>
-	/* Страница полиграфии */
 var polCalc = $('#polygraphy_calc'),
 	calcWrapper = $(document.querySelector('.polygraphy_calc_container')),
 	calcButton = $('#calc_button'),
