--- a/static-scripts/LaoCalcHosting/index.html
+++ b/static-scripts/LaoCalcHosting/index.html
@@ -11,6 +11,7 @@
 	<title>Калькулятор стоимости хостинга</title>
 </head>
 <body>
+	<script src="../header.js"></script>
 	<div class="main_calc">
 		<div class="step step_1" style="display: block;">
 			<div>
