--- a/static-scripts/RiofitnessSvgMap/index.html
+++ b/static-scripts/RiofitnessSvgMap/index.html
@@ -175,6 +175,7 @@ body {
 </style>
 </head>
 <body>
+	<script src="../header.js"></script>
 	<div id="plan_club" class="fitnes_floors">
 		<div class="floor_2">
 			<div class="floor_plan_2">
