--- a/static-scripts/AkcentufaCalcPolygraphy/index.html
+++ b/static-scripts/AkcentufaCalcPolygraphy/index.html
@@ -188,7 +188,7 @@
 .selectric-items .selectric-group li {
     padding-left: 25px
 }
-
+html, body {min-width: 550px;}
 * {
 	margin: 0;
     padding: 0;
@@ -677,184 +677,7 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery-selectric@0.1.2/src/jquery.selectric.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/multiple-select@1.2.1/multiple-select.min.js"></script>
 <script>
-var polCalc = $('#polygraphy_calc'),
-	calcWrapper = $(document.querySelector('.polygraphy_calc_container')),
-	calcButton = $('#calc_button'),
-	resCalc = $('#res_calc');
-// Калькулятор
-var selectSet = {
-	arrowButtonMarkup: '<b class="button"></b>',
-	disableOnMobile: false,
-};
-// главный селект в калькуляторе
-$('#select_poly_calc').selectric(selectSet).on('change', function (el) {
-	// Переключение калькуляторов
-	var val = $(this).val(),
-		active = calcWrapper.find('.calc_type.active');
-	calcWrapper.attr('data-active-calc', val);
-	calcButton.attr('data-active-calc', val);
-	if (calcWrapper.find(`.${val}`).hasClass('active')) {
-		return false;
-	}
-	resCalc.text('');
-	active.fadeOut(100, function () {
-		var che = calcWrapper.find(`.${val}`);
-		che.fadeIn(300).addClass('active');
-	}).removeClass('active');
-});
-// остальные селекты
-polCalc.find('.selectric_select').selectric(selectSet);
-
-// Толька цифры в поля
-var inputCalc = calcWrapper.find('.input_calc');
-inputCalc.bind("change keyup input click", function () {
-	if (this.value.match(/[^0-9]/g)) {
-		this.value = this.value.replace(/[^0-9]/g, '');
-	}
-});
-
-// Калькулятр - логика
-calcButton.click(function (e) {
-	var $this = $(this),
-		active = calcWrapper.find('.calc_type.active');
-	var print = parseFloat(active.find('.print').val()),
-		format = parseFloat(active.find('.format').val()),
-		paper = parseFloat(active.find('.paper').val()),
-		laminate = parseFloat(active.find('.laminate').val()),
-		count = parseInt(active.find('.input_calc').val(), 10),
-		percent = parseInt(active.attr('data-percent')),
-		percent2 = parseInt(active.attr('data-percent2')),
-		coefficient = 1.15;
-
-	// Функция изменения процента в зависимости от выбранных параметров
-	var setPercent = function (format, count) {
-		switch (format, count) {
-			case 1, 500 :
-				percent = percent2;
-				break;
-			case 2, 1000 :
-				percent = percent2;
-				break;
-			case 4, 2000 :
-				percent = percent2;
-				break;
-			case 8, 4000 :
-				percent = percent2;
-				break;
-			case 16, 8000 :
-				percent = percent2;
-				break;
-			default:
-				percent = percent;
-				break;
-		}
-	};
-
-	var res;
-
-	// Логика калькуляторов
-	if (active.hasClass('leaflet')) {
-		setPercent(format, count);
-		// Расчет по формуле
-		res = ((paper + print) * coefficient) / format;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-		// Умножили на количество
-		res = res * count;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-		// Прибавляем процент
-		res = (res / 100) * percent;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-	}
-	if (active.hasClass('card')) {
-		paper = 5.18;
-		setPercent(format, count);
-		// По формуле
-		res = ((paper + print) * coefficient) / 24;
-		res = Math.round(res * 100) / 100;
-		// Умножаем на кол-во
-		res = res * count;
-		res = Math.round(res * 100) / 100;
-		// Прибавляем процент
-		res = (res / 100) * percent;
-		res = Math.round(res * 100) / 100;
-	}
-	if (active.hasClass('calendar')) {
-		paper = 5.18;
-		print = 6.00;
-		setPercent(format, count);
-		// По формуле
-		res = ((paper + print + laminate) * coefficient) / 16;
-		res = Math.round(res * 100) / 100;
-		// Умножаем на кол-во
-		res = res * count;
-		res = Math.round(res * 100) / 100;
-		// Прибавляем процент
-		res = (res / 100) * percent;
-		res = Math.round(res * 100) / 100;
-	}
-	if (active.hasClass('booklet')) {
-		format = 2;
-		print = 6.00;
-		setPercent(format, count);
-		// По формуле
-		res = ((paper + print) * coefficient) / format;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-		// Умножили на количество
-		res = res * count;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-		// Прибавляем процент
-		res = (res / 100) * percent;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-	}
-	if (active.hasClass('letter')) {
-		format = 2;
-		print = 3.00;
-		setPercent(format, count);
-		// По формуле
-		res = ((paper + print) * coefficient) / format;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-		// Умножили на количество
-		res = res * count;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-		// Прибавляем процент
-		res = (res / 100) * percent;
-		// Округлили до 10 го порядка
-		res = Math.round(res * 100) / 100;
-	}
-
-	if (res.toString() === 'NaN' || res === 0) {
-		resCalc.html('<em class="red">Введите кол-во</em>');
-		active.find('.input_calc').val('').focus();
-	} else {
-		resCalc.text(`${res} руб`);
-	}
-});
-
-// Добавим title для option в selectric
-calcWrapper.find('.selectric-items li').each(function (i, el) {
-	var $el = $(el);
-	$el.attr('title', $el.text());
-});
-
-var mSelect = $('#js-multiple-select');
-mSelect.multipleSelect({
-	placeholder: 'Выберите товар',
-	selectAll: false,
-	minimumCountSelected: 5,
-	allSelected: 'Выбраны все услуги',
-	countSelected: 'выбрано #  из %',
-	onClick: function(e) {
-		$('#js-order-form').find('.ms-choice').removeClass('error_bg');
-	}
-});
+var polCalc=$('#polygraphy_calc'),calcWrapper=$(document.querySelector('.polygraphy_calc_container')),calcButton=$('#calc_button'),resCalc=$('#res_calc'),selectSet={arrowButtonMarkup:'<b class="button"></b>',disableOnMobile:!1};$('#select_poly_calc').selectric(selectSet).on('change',function(){var b=$(this).val(),c=calcWrapper.find('.calc_type.active');return calcWrapper.attr('data-active-calc',b),calcButton.attr('data-active-calc',b),!calcWrapper.find(`.${b}`).hasClass('active')&&void(resCalc.text(''),c.fadeOut(100,function(){var d=calcWrapper.find(`.${b}`);d.fadeIn(300).addClass('active')}).removeClass('active'))}),polCalc.find('.selectric_select').selectric(selectSet);var inputCalc=calcWrapper.find('.input_calc');inputCalc.bind('change keyup input click',function(){this.value.match(/[^0-9]/g)&&(this.value=this.value.replace(/[^0-9]/g,''))}),calcButton.click(function(){var b=$(this),c=calcWrapper.find('.calc_type.active'),d=parseFloat(c.find('.print').val()),f=parseFloat(c.find('.format').val()),g=parseFloat(c.find('.paper').val()),h=parseFloat(c.find('.laminate').val()),j=parseInt(c.find('.input_calc').val(),10),k=parseInt(c.attr('data-percent')),l=parseInt(c.attr('data-percent2')),m=1.15,n=function(p,q){switch(p,q){case(1,500):k=l;break;case(2,1e3):k=l;break;case(4,2e3):k=l;break;case(8,4e3):k=l;break;case(16,8e3):k=l;break;default:k=k;}},o;c.hasClass('leaflet')&&(n(f,j),o=(g+d)*m/f,o=Math.round(100*o)/100,o*=j,o=Math.round(100*o)/100,o=o/100*k,o=Math.round(100*o)/100),c.hasClass('card')&&(g=5.18,n(f,j),o=(g+d)*m/24,o=Math.round(100*o)/100,o*=j,o=Math.round(100*o)/100,o=o/100*k,o=Math.round(100*o)/100),c.hasClass('calendar')&&(g=5.18,d=6,n(f,j),o=(g+d+h)*m/16,o=Math.round(100*o)/100,o*=j,o=Math.round(100*o)/100,o=o/100*k,o=Math.round(100*o)/100),c.hasClass('booklet')&&(f=2,d=6,n(f,j),o=(g+d)*m/f,o=Math.round(100*o)/100,o*=j,o=Math.round(100*o)/100,o=o/100*k,o=Math.round(100*o)/100),c.hasClass('letter')&&(f=2,d=3,n(f,j),o=(g+d)*m/f,o=Math.round(100*o)/100,o*=j,o=Math.round(100*o)/100,o=o/100*k,o=Math.round(100*o)/100),'NaN'===o.toString()||0===o?(resCalc.html('<em class="red">\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u043A\u043E\u043B-\u0432\u043E</em>'),c.find('.input_calc').val('').focus()):resCalc.text(`${o} руб`)}),calcWrapper.find('.selectric-items li').each(function(a,b){var c=$(b);c.attr('title',c.text())});var mSelect=$('#js-multiple-select');mSelect.multipleSelect({placeholder:'\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0442\u043E\u0432\u0430\u0440',selectAll:!1,minimumCountSelected:5,allSelected:'\u0412\u044B\u0431\u0440\u0430\u043D\u044B \u0432\u0441\u0435 \u0443\u0441\u043B\u0443\u0433\u0438',countSelected:'\u0432\u044B\u0431\u0440\u0430\u043D\u043E #  \u0438\u0437 %',onClick:function(){$('#js-order-form').find('.ms-choice').removeClass('error_bg')}});
 </script>
 </body>
 
