--- a/iframe-sites/mobile-sites/mRiofitness/index.html
+++ b/iframe-sites/mobile-sites/mRiofitness/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<script src="../../../static-scripts/header.js"></script>
+	<script src="../../iframe.js"></script>
 	<link rel="stylesheet" href="../style.css">
 	<style>
 		.c-mobile-iframe__view {
@@ -24,7 +25,7 @@
 	</style>
 	<div class="c-mobile-iframe">
 		<div class="c-mobile-iframe__inner">
-			<iframe src="http://m.riofitness.ru/" frameborder="0" class="c-mobile-iframe__view"></iframe>
+			<iframe id="iframe-site" src="http://m.riofitness.ru/" frameborder="0" class="c-mobile-iframe__view"></iframe>
 		</div>
 	</div>
 </body>
