--- a/iframe-sites/mobile-sites/mRiofitness/index.html
+++ b/iframe-sites/mobile-sites/mRiofitness/index.html
@@ -25,7 +25,7 @@
 	</style>
 	<div class="c-mobile-iframe">
 		<div class="c-mobile-iframe__inner">
-			<iframe id="iframe-site" src="http://m.riofitness.ru/" frameborder="0" class="c-mobile-iframe__view"></iframe>
+			<iframe id="iframe-site" src="https://m.riofitness.ru/" frameborder="0" class="c-mobile-iframe__view"></iframe>
 		</div>
 	</div>
 </body>
