- add favicon - add static-script - notes for Wordpress

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
-	<link rel="icon" type="image/png" href="public/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/ico" href="images/favicon.ico" sizes="16x16">
 	<script>
 		/*! device.js 0.2.7 */
 		/* https://github.com/matthewhudson/device.js */
