--- a/static-scripts/StoreAutomationCalculator/index.html
+++ b/static-scripts/StoreAutomationCalculator/index.html
@@ -4,17 +4,16 @@
     <title>Калькулятор для магазина торгового оборудования и программ</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=500">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="public/favicon-32x32.png" sizes="32x32">
   </head>
   <body>
 	<div id="app"></div>
-	<script src="../header.js"></script>
-	<script src="./settings/category-list.js"></script>
-	<script src="./settings/goods-list.js"></script>
-	<script src="./settings/goods-map.js"></script>
-	<script src="./settings/settings.js"></script>
-	<script src="./dist/build.js"></script>
+	<script src="/settings/category-list.js"></script>
+	<script src="/settings/goods-list.js"></script>
+	<script src="/settings/goods-map.js"></script>
+	<script src="/settings/settings.js"></script>
+	<script src="/dist/build.js"></script>
   </body>
 </html>
