--- a/static-scripts/StoreAutomationCalculator/index.html
+++ b/static-scripts/StoreAutomationCalculator/index.html
@@ -10,10 +10,10 @@
   </head>
   <body>
 	<div id="app"></div>
-	<script src="/settings/category-list.js"></script>
-	<script src="/settings/goods-list.js"></script>
-	<script src="/settings/goods-map.js"></script>
-	<script src="/settings/settings.js"></script>
-	<script src="/dist/build.js"></script>
+	<script src="./settings/category-list.js"></script>
+	<script src="./settings/goods-list.js"></script>
+	<script src="./settings/goods-map.js"></script>
+	<script src="./settings/settings.js"></script>
+	<script src="./dist/build.js"></script>
   </body>
 </html>
