--- a/static-scripts/StoreAutomationCalculator/index.html
+++ b/static-scripts/StoreAutomationCalculator/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
 	<div id="app"></div>
+	<script src="../header.js"></script>
 	<script src="./settings/category-list.js"></script>
 	<script src="./settings/goods-list.js"></script>
 	<script src="./settings/goods-map.js"></script>
